# micro-assembler

./: .gitignore  .travis.yml  Cargo.toml  LICENSE.txt  README.md  appveyor.yml  input.yaml
ci/: before_deploy.ps1  before_deploy.sh
src/: bits.rs  constants.rs  main.rs  micro.rs
