[package]
name = "micro-assembler"
version = "0.2.3"
description = "Tool to aid in compiling microcode for CIS 451 homework"
authors = ["John Doneth <doneth7@gmail.com>"]
edition = "2018"

[dependencies]
yaml-rust = "0.4.2"
lazy_static = "1.2.0"
sugar = "0.2.0"
clap = "2.32.0"
simple_logger = "1.0.1"
log = "0.4.6"